--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,3 @@
 {
-    "python.analysis.extraPaths": 
-        [
-            "D:/odoo/odoo-stubs-14.0", 
-            "D:/odoo/odoo-14.0"
-        ]
+  "python.analysis.extraPaths": ["D:/odoo/odoo-stubs-14.0", "D:/odoo/odoo-14.0"]
 }
